fix excessive padding on mobile. closes #25

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -105,7 +105,7 @@ body {
 }
 
 .full-container {
-	padding: 30px;
+	padding: 4vw;
 }
 
 .text-left {
